--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>BATMAN</title>
+        <link rel="icon"href="img/BatmanBruceWayne.jpg" />
     </head>
     <body>
         <!-- header element -->
@@ -14,7 +15,7 @@
         <main>
             <h2>About Batman</h2>
             <p>Batman[a] is a superhero appearing in American comic books published by DC Comics.In the DC Universe continuity, Batman is the alias of Bruce Wayne, a wealthy American playboy, philanthropist, and industrialist who resides in Gotham City. Batman's origin story features him swearing vengeance against criminals after witnessing the murder of his parents Thomas and Martha as a child, a vendetta tempered with the ideal of justice. He trains himself physically and intellectually, crafts a bat-inspired persona, and monitors the Gotham streets at night.</p>
-            <img scr="img/batmaninthesky">
+            <img src="img/batmanawesome.jpeg.jpg">
             <!--Characteristics-->
             <H2>Batman's Characteristics</H2>
             <ol>
@@ -26,14 +27,14 @@
                 Here they are
             </p>
             <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Two-Face">Two-Face</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Man-Bat">Man-Bat</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Catwoman">Catwoman</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Scarecrow">Scarecrow</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Joker">Joker</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Ra%27s_al_Ghul">Ra's al Ghul</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Riddler">Riddler</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Poison_Ivy_(character)">Poison Ivy</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Two-Face">Two-Face</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Man-Bat">Man-Bat</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Catwoman">Catwoman</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Scarecrow_(DC_Comics)">Scarecrow</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Joker_(character)">Joker</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Ra%27s_al_Ghul">Ra's al Ghul</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Riddler">Riddler</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Poison_Ivy_(character)">Poison Ivy</a></li>
             </ul>
         </main>
         <!--Footer Element-->
