created css for character + changed some HTML

--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,10 @@
     <head>
         <title>BATMAN</title>
         <link rel="icon"href="img/BatmanBruceWayne.jpg" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel="Stylesheet" type="text/css" href="css/hero.css">
     </head>
     <body>
         <!-- header element -->
@@ -16,14 +20,11 @@
             <h2>About Batman</h2>
             <p>Batman[a] is a superhero appearing in American comic books published by DC Comics.In the DC Universe continuity, Batman is the alias of Bruce Wayne, a wealthy American playboy, philanthropist, and industrialist who resides in Gotham City. Batman's origin story features him swearing vengeance against criminals after witnessing the murder of his parents Thomas and Martha as a child, a vendetta tempered with the ideal of justice. He trains himself physically and intellectually, crafts a bat-inspired persona, and monitors the Gotham streets at night.</p>
             <img src="img/batmanawesome.jpeg.jpg">
-            <!--Characteristics-->
-            <H2>Batman's Characteristics</H2>
-            <ol>
-                <li>he's strong</li><li>he's fearless</li><li>he's got the greatest butler ever</li>
-            </ol>
+            <p class="caption"> he's strong | he's fearless | he's got the greatest butler ever</p>
+            
             <!--Enemies-->
             <h2>Emenies of Batman</h2>
-            <p>Batman's made a few enemies along the way to clean out Gotham.
+            <p>He's made a few enemies along the way, to clean out Gotham.
                 Here they are
             </p>
             <ul>
@@ -39,7 +40,7 @@
         </main>
         <!--Footer Element-->
         <footer>
-<p> this website was created during an online Udemy + taptapKaboom class.
+<p> This website was created during an online Udemy + taptapKaboom class.
     &copy; TaptapGenius
 </p>
         </footer>
