--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-        <link rel="Stylesheet" type="text/css" href="Css/hero.css">
+        <link rel="Stylesheet" type="text/css" href="css/hero.css">
     </head>
     <body>
         <!-- header element -->
